Update API and pagenation
